modules/ballerina-core/src/test/resources/samples/parser/invalidSemantic/IncompatibleTypeAssignment.bal
package samples.parser.invalidSemantic;

function main(string[] i) {

	// Following line is invalid.
	boolean b;
	b = 12;
	reply m;
}
